# escarg

./: .gitignore  Makefile.am  README.md  configure.ac  escarg.pc.in
src/include/: Escarg.h
src/lib/: escarg_bash.c  escarg_main.c  escarg_posix.c  escarg_private.h  escarg_utils.c  escarg_windows.c
